[FLINK-37925][table] Support casting from `VARIANT` to primitive types